# fastapi-amis-admin-nav

./: .flake8  .gitignore  README.md  pyproject.toml
fastapi_amis_admin_nav/: __init__.py  admin.py  models.py  utils.py
