[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_amis_admin_nav"
authors = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
maintainers = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
description = "FastAPI-Amis-Admin-Nav是一个基于FastAPI-Amis-Admin并且为FastAPI-Amis-Admin提供可视化导航页面管理的拓展库."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
keywords = [
    "fastapi",
    "fastapi-user-auth",
    "fastapi-amis-admin",
    "fastapi-amis-admin-nav"
]
classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastapi-amis-admin>=0.5.2",
]



[project.urls]
Documentation = "http://docs.amis.work/"
Source = "https://github.com/amisadmin/fastapi_amis_admin_nav"
FastAPI-Amis-Admin = "https://github.com/amisadmin/fastapi_amis_admin"


# pytest
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# pytest-asyncio
asyncio_mode = "auto"

[tool.isort]
profile = "black"
atomic = true
filter_files = true

[tool.black]
line-length = 130
include = '\.pyi?$'

[tool.pdm]
[tool.pdm.dev-dependencies]
[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test = "pytest"